2001-10-17	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/check-rdbg.m4: Fix latent bug exposed by removal of
	config.cache's which prevented powerpc targets librdbg from building. 

2001-10-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/rtems-cpu-subdirs.m4: Add PREFIX arg to RTEMS_CPU_SUBDIRS,
	add 2nd arg to _RTEMS_CPU_SUBDIR.
	* aclocal/target.m4: Replace ac_configure_args with
	rtems_configure_args, add rtems_configure_args to INIT-CMDS.
	* Makefile.am: Require automake-1.5.

2001-10-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Add autom4te.cache for autoconf > 2.52.
	* configure.in: Remove.
	* configure.ac: New file, generated from configure.in by autoupdate.

2001-10-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/rtems-cpu-subdirs.m4: New file.

2001-10-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/compile.am: Fundamentally reworked compilation rules for 
	closer adaptation to automake's behavior.

2001-09-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/lib.am: Comment out LD.
	* Makefile.am: Use ACLOCAL_FILES = to make automake-1.5 happy; Add
	automake/leaf.am to AUTOMAKE_FILES.

2001-09-27	Joel Sherrill <joel@OARcorp.com>

	* config.guess: No longer in CVS since installed by bootstrap.

2001-09-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* bootstrap: remove/add automake added files.
	* .cvsignore: reflect changes to bootstrap.

2001-09-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/leaf.am: New file.

2001-09-14	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/canonical-target-name.m4: Use AC_CANONICAL_TARGET instead
	of AC_CANONICAL_SYSTEM.
	* aclocal/config-subdirs.m4: Use AS_MKDIR_P instead of
	mkinstalldirs and mkdir.
	* aclocal/target.m4: Obsolete RTEMS_OUTPUT_BUILD_SUBDIRS,
	hack RTEMS_CONFIG_BUILD_SUBDIRS, introduce
	_RTEMS_OUTPUT_BUILD_SUBDIRS.
	
2001-09-13	Joel Sherrill <joel@OARcorp.com>

	* missing: Updated to latest version.
