@@ -1,9 +1,16 @@
 include $(RTEMS_ROOT)/make/leaf.cfg
 
+CXXLINK_APP = $(CXXLINK) $(LDLIBS) $(LINK_OBJS) $(LINK_LIBS)
 ifndef make-cxx-exe
 define make-cxx-exe
-	$(LINK.cc) $(AM_CFLAGS) $(AM_LDFLAGS) \
-	$(LDLIBS) -o $@ \
-	$(LINK_OBJS) $(LINK_LIBS)
+	$(CXXLINK_APP)
 endef
 @ENDIF@
+
+LINK_APP = $(LINK) $(LDLIBS) $(LINK_OBJS) $(LINK_LIBS)
+ifndef make-exe
+define make-exe
+	$(LINK_APP)
+endef
+@ENDIF@
+
